# cc2538-bsl

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  LICENSE.md  Makefile  Pipfile  README.md  README.wb.md  cc2538-bsl.py  cc2538.py  flake.nix  pyproject.toml  requirements.txt  run  setup.py  upload_wrapper.py  wb-cc2652p-flasher
.github/workflows/: image-build.yml
cc2538_bsl/: cc2538_bsl.py
debian/: changelog  control  rules  wb-cc2652p-flasher.install
tests/: test_cc2538-bsl.py
